Noen forenklinger/forbedringer i bruk av tidslinjer (#7038)
* Noen forenklinger/forbedringer i bruk av tidslinjer

* Flytter DatoIntervallEntitiet.fraTimeline